--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
   form(action="/users/create", method="post")
     .ui.input
         input(type="text", name="username")
-        input(type="submit")
+        input(type="submit", class="ui primary button")
 
   h2 Users
 
