add dependency jquery to semantic ui and add yarn with pos install

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,5 @@ html
 
   body
     block content
-
+    script(type='text/javascript', src='/components/jquery/dist/jquery.min.js')
     script(type='text/javascript', src='/semantic/dist/semantic.min.js')
